src/objects/Lease_Fund_Product_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Astrum_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Product</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Lease Fund Product Mappings</relationshipLabel>
        <relationshipName>Lease_Fund_Product_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Fund_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Fund Product</label>
        <referenceTo>NRG_String_Component__c</referenceTo>
        <relationshipLabel>Lease Fund Product Mappings</relationshipLabel>
        <relationshipName>Lease_Fund_Product_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <label>Lease Fund</label>
        <picklist>
            <picklistValues>
                <fullName>NRG Residential Solar Solutions, LLC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lease Fund Product Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Astrum_Product__c</columns>
        <columns>Lease_Fund_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LF-{0000}</displayFormat>
        <label>Lease Fund Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Fund Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>